rusty-cdk-macros/tests/fails/string_with_only_alphanumerics_underscores_and_hyphens_empty.stderr
error: min allowed length is 1 (was 0)
 --> tests/fails/string_with_only_alphanumerics_underscores_and_hyphens_empty.rs:4:61
  |
4 |     string_with_only_alphanumerics_underscores_and_hyphens!("");
  |                                                             ^^
